# cmake-init

./: .gitignore  .ignore  .travis.yml  ADAPT  ADAPT.md  AUTHORS  CMakeLists.txt  Dockerfile  LICENSE  README.md  appveyor.yml  configure  template-config.cmake  template-files.cmake
.github/workflows/: ci.yml  compile.yml
cmake/: CheckSimd.cmake  CheckTemplate.cmake  ClangFormat.cmake  ClangTidy.cmake  CompileOptions.cmake  ConfigureModule.cmake  Coverage.cmake  Cppcheck.cmake  Custom.cmake  DownloadProject.CMakeLists.cmake.in  DownloadProject.cmake  FindEGL.cmake  FindFFMPEG.cmake  FindGLESv2.cmake  FindGLEW.cmake  FindGLFW.cmake  FindGMOCK.cmake  FindGTEST.cmake  FindGTK3.cmake  FindGTK4.cmake  FindGcov.cmake  FindHIDAPI.cmake  FindSDL2.cmake  FindTRDP.cmake  Findclang_tidy.cmake  Findcppcheck.cmake  Findgcov.cmake  Findgoogletest.cmake  Findlcov.cmake  Gcov.cmake  GenerateTemplateExportHeader.cmake  GetGitRevisionDescription.cmake  GitRevision.cmake  HealthCheck.cmake  ModuleInformation.cmake  PlatformLinuxClang.cmake  PlatformLinuxGCC.cmake  PlatformMacOS.cmake  PlatformWindowsGCC.cmake  PlatformWindowsMSVC.cmake  (+2 more)
codegeneration/: baselib_features.h  fiblib_features.h
data/: example.txt
deploy/: CMakeLists.txt  README.md  template-config.cmake
deploy/ubuntu-ppa/: recipe.txt
deploy/ubuntu-ppa/debian/: changelog  control  copyright  rules
docs/: CMakeLists.txt
docs/api-docs/: CMakeLists.txt  doxyfile.in
docs/doxygen/: CMakeLists.txt  doxyfile.in  namespacedocumentation.h
docs/manual/: CMakeLists.txt
findscripts/: FindFFMPEG.cmake  FindGLFW.cmake
source/: CMakeLists.txt  README.md  main.cpp  meta.h.in  template-version.h.in  version.h.in
source/baselib/: CMakeLists.txt  baselib-module.json.in
source/baselib/include/baselib/: baselib.h
source/baselib/source/: baselib.cpp
source/codegeneration/: template_api.h.in  template_msvc_api.h.in  template_msvc_api.in
source/examples/: CMakeLists.txt
source/examples/fibcmd/: CMakeLists.txt  main.cpp
source/examples/fibgui/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui
source/fibcmd/: CMakeLists.txt  main.cpp
source/fibgui/: CMakeLists.txt  MainWindow.cpp  MainWindow.h
source/fiblib/: CMakeLists.txt
source/fiblib/include/fiblib/: CTFibonacci.h  CTFibonacci.inl  Fibonacci.h  fiblib_api.h
source/fiblib/source/: Fibonacci.cpp
source/scripts/: CMakeLists.txt  check_template.sh
source/tests/: CMakeLists.txt  README.md
source/tests/fiblib-test/: CMakeLists.txt  fibonacci_test.cpp  main.cpp
source/tests/googletest/googlemock/: CMakeLists.txt
source/tests/googletest/googletest/: CMakeLists.txt
